[tool.poetry]
name = "onesource-score-calculation"
version = "0.1.0"
description = "for determining the score of Onesource"
authors = ["Shankar  <shankarydv8010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "^2.10.4"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
